--- a/boot/boot.properties
+++ b/boot/boot.properties
@@ -1,7 +1,7 @@
 #http://boot-clj.com
-#Wed Oct 26 12:08:06 CEST 2016
+#Wed Feb 01 15:51:30 CET 2017
 BOOT_EMIT_TARGET=no
 BOOT_JVM_OPTIONS=-client -XX\:+TieredCompilation -XX\:TieredStopAtLevel\=1 -Xmx2g -XX\:+UseConcMarkSweepGC -XX\:+CMSClassUnloadingEnabled -Xverify\:none
 BOOT_CLOJURE_NAME=org.clojure/clojure
-BOOT_CLOJURE_VERSION=1.8.0
-BOOT_VERSION=2.6.0
+BOOT_CLOJURE_VERSION=1.9.0-alpha14
+BOOT_VERSION=2.7.1
