--- a/.gitmodules
+++ b/.gitmodules
@@ -259,3 +259,6 @@
 [submodule "vim/bundle/default/css3-syntax"]
 	path = vim/bundle/default/css3-syntax
 	url = https://github.com/hail2u/vim-css3-syntax.git
+[submodule "vim/bundle/default/pipe"]
+	path = vim/bundle/default/pipe
+	url = https://github.com/krisajenkins/vim-pipe.git
