--- a/tmux.conf
+++ b/tmux.conf
@@ -38,8 +38,11 @@ unbind p
 bind p paste-buffer
 bind P choose-buffer
 bind Escape copy-mode
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi Escape send -X cancel
+bind-key -Tcopy-mode-vi V send -X rectangle-toggle
 
 bind S choose-tree
 unbind s
