[boot] Upgrade Clojure version

--- a/boot/boot.properties
+++ b/boot/boot.properties
@@ -1,7 +1,7 @@
 #http://boot-clj.com
-#Wed Feb 01 15:51:30 CET 2017
+#Fri May 12 18:12:49 CEST 2017
 BOOT_EMIT_TARGET=no
 BOOT_JVM_OPTIONS=-client -XX\:+TieredCompilation -XX\:TieredStopAtLevel\=1 -Xmx2g -XX\:+UseConcMarkSweepGC -XX\:+CMSClassUnloadingEnabled -Xverify\:none
 BOOT_CLOJURE_NAME=org.clojure/clojure
-BOOT_CLOJURE_VERSION=1.9.0-alpha14
 BOOT_VERSION=2.7.1
+BOOT_CLOJURE_VERSION=1.9.0-alpha16
