--- a/.gitmodules
+++ b/.gitmodules
@@ -295,3 +295,6 @@
 [submodule "vim/bundle/default/textobj-datetime"]
 	path = vim/bundle/default/textobj-datetime
 	url = https://github.com/kana/vim-textobj-datetime.git
+[submodule "vim/bundle/default/tortoise-typing"]
+	path = vim/bundle/default/tortoise-typing
+	url = https://github.com/thanthese/Tortoise-Typing.git
