--- a/.gitmodules
+++ b/.gitmodules
@@ -298,3 +298,6 @@
 [submodule "vim/bundle/default/qf"]
 	path = vim/bundle/default/qf
 	url = https://github.com/romainl/vim-qf.git
+[submodule "vim/bundle/default/salve"]
+	path = vim/bundle/default/salve
+	url = https://github.com/tpope/vim-salve.git
