--- a/boot/boot.properties
+++ b/boot/boot.properties
@@ -1,7 +1,7 @@
 #http://boot-clj.com
-#Thu Oct 19 15:12:57 CEST 2017
+#Thu Oct 19 15:46:56 CEST 2017
 BOOT_EMIT_TARGET=no
 BOOT_JVM_OPTIONS=-client -XX\:+TieredCompilation -XX\:TieredStopAtLevel\=1 -Xmx2g -XX\:+UseConcMarkSweepGC -XX\:+CMSClassUnloadingEnabled -Xverify\:none
 BOOT_CLOJURE_NAME=org.clojure/clojure
-BOOT_CLOJURE_VERSION=1.9.0-alpha16
 BOOT_VERSION=2.7.2
+BOOT_CLOJURE_VERSION=1.9.0-beta2
