[tmux] Add shortcuts for navigating windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,6 +51,8 @@ bind v split-window -h -c "#{pane_current_path}"
 unbind c
 bind c new-window -c "#{pane_current_path}"
 bind N previous-window
+bind ö previous-window
+bind ä next-window
 
 bind h select-pane -L
 bind j select-pane -D
