--- a/tmux.conf
+++ b/tmux.conf
@@ -40,7 +40,7 @@ bind P choose-buffer
 bind Escape copy-mode
 
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 bind-key -Tcopy-mode-vi Escape send -X cancel
 bind-key -Tcopy-mode-vi V send -X rectangle-toggle
 
@@ -74,7 +74,3 @@ set-option -ga update-environment ' ITERM_PROFILE'
 
 # clear screen
 bind C-k send-keys -R \; send-keys C-l \; clear-history
-
-# Fix pasteboard
-if-shell 'command -v reattach-to-user-namespace >/dev/null 2>&1' \
-  'set-option -g default-command "reattach-to-user-namespace -l zsh"'
