--- a/.gitmodules
+++ b/.gitmodules
@@ -307,3 +307,6 @@
 [submodule "base16-shell"]
 	path = config/base16-shell
 	url = https://github.com/chriskempson/base16-shell.git
+[submodule "vim/plugin/bundle/base16"]
+	path = vim/bundle/default/base16
+	url = https://github.com/chriskempson/base16-vim.git
