--- a/.gitmodules
+++ b/.gitmodules
@@ -309,7 +309,7 @@
 	url = https://github.com/chriskempson/base16-shell.git
 [submodule "vim/plugin/bundle/base16"]
 	path = vim/bundle/default/base16
-	url = https://github.com/chriskempson/base16-vim.git
+	url = https://github.com/danielwe/base16-vim.git
 [submodule "vim/bundle/default/qfenter"]
 	path = vim/bundle/default/qfenter
 	url = https://github.com/yssl/QFEnter.git
