[nvim] Install projectionist

--- a/.gitmodules
+++ b/.gitmodules
@@ -316,3 +316,6 @@
 [submodule "nvim/pack/bundle/opt/fzf"]
 	path = nvim/pack/bundle/opt/fzf
 	url = https://github.com/junegunn/fzf.vim.git
+[submodule "nvim/pack/bundle/start/projectionist"]
+	path = nvim/pack/bundle/start/projectionist
+	url = https://github.com/tpope/vim-projectionist.git
