--- a/.gitmodules
+++ b/.gitmodules
@@ -319,3 +319,9 @@
 [submodule "nvim/pack/bundle/start/projectionist"]
 	path = nvim/pack/bundle/start/projectionist
 	url = https://github.com/tpope/vim-projectionist.git
+[submodule "nvim/pack/bundle/start/dispatch-neovim"]
+	path = nvim/pack/bundle/start/dispatch-neovim
+	url = https://github.com/radenling/vim-dispatch-neovim.git
+[submodule "nvim/pack/bundle/start/dispatch"]
+	path = nvim/pack/bundle/start/dispatch
+	url = https://github.com/tpope/vim-dispatch.git
