--- a/.gitmodules
+++ b/.gitmodules
@@ -325,3 +325,6 @@
 [submodule "nvim/pack/bundle/start/dispatch"]
 	path = nvim/pack/bundle/start/dispatch
 	url = https://github.com/tpope/vim-dispatch.git
+[submodule "nvim/pack/bundle/start/qf"]
+	path = nvim/pack/bundle/start/qf
+	url = https://github.com/romainl/vim-qf.git
