--- a/.gitmodules
+++ b/.gitmodules
@@ -328,3 +328,6 @@
 [submodule "nvim/pack/bundle/start/qf"]
 	path = nvim/pack/bundle/start/qf
 	url = https://github.com/romainl/vim-qf.git
+[submodule "nvim/pack/bundle/start/vinegar"]
+	path = nvim/pack/bundle/start/vinegar
+	url = https://github.com/tpope/vim-vinegar.git
