--- a/.gitmodules
+++ b/.gitmodules
@@ -337,3 +337,6 @@
 [submodule "nvim/pack/bundle/start/surround"]
 	path = nvim/pack/bundle/start/surround
 	url = https://github.com/tpope/vim-surround.git
+[submodule "nvim/pack/bundle/start/fugitive"]
+	path = nvim/pack/bundle/start/fugitive
+	url = https://github.com/tpope/vim-fugitive.git
