--- a/.gitmodules
+++ b/.gitmodules
@@ -340,3 +340,6 @@
 [submodule "nvim/pack/bundle/start/fugitive"]
 	path = nvim/pack/bundle/start/fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "nvim/pack/bundle/start/ale"]
+	path = nvim/pack/bundle/start/ale
+	url = https://github.com/w0rp/ale.git
