--- a/.gitmodules
+++ b/.gitmodules
@@ -346,3 +346,6 @@
 [submodule "nvim/pack/bundle/start/local-vimrc"]
 	path = nvim/pack/bundle/start/local-vimrc
 	url = https://github.com/MarcWeber/vim-addon-local-vimrc.git
+[submodule "nvim/pack/bundle/start/base16"]
+	path = nvim/pack/bundle/start/base16
+	url = https://github.com/chriskempson/base16-vim.git
