--- a/.gitmodules
+++ b/.gitmodules
@@ -376,3 +376,6 @@
 [submodule "nvim/pack/bundle/opt/sexp-mappings-for-regular-people"]
 	path = nvim/pack/bundle/opt/sexp-mappings-for-regular-people
 	url = https://github.com/tpope/vim-sexp-mappings-for-regular-people.git
+[submodule "nvim/pack/bundle/opt/rainbow"]
+	path = nvim/pack/bundle/opt/rainbow
+	url = https://github.com/luochen1990/rainbow.git
