--- a/.gitmodules
+++ b/.gitmodules
@@ -382,3 +382,6 @@
 [submodule "config/base16-fzf"]
 	path = config/base16-fzf
 	url = https://github.com/nicodebo/base16-fzf.git
+[submodule "nvim/pack/bundle/opt/fireplace"]
+	path = nvim/pack/bundle/opt/fireplace
+	url = https://github.com/tpope/vim-fireplace.git
