--- a/config/pgcli/config
+++ b/config/pgcli/config
@@ -60,7 +60,7 @@ asterisk_column_order = table_order
 
 # Default pager.
 # By default 'PAGER' environment variable is used
-# pager = less -SRXF
+pager = less -SRXF
 
 # Timing of sql statments and table rendering.
 timing = True
