--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "nvim/pack/bundle/start/nginx"]
 	path = nvim/pack/bundle/start/nginx
 	url = https://github.com/chr4/nginx.vim.git
+[submodule "nvim/pack/bundle/start/iced"]
+	path = nvim/pack/bundle/start/iced
+	url = https://github.com/liquidz/vim-iced.git
