[tmux] Support italic text inside Tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,8 +7,11 @@ unbind C-b
 set -g base-index 1
 setw -g pane-base-index 1
 
-set -g default-terminal "screen-256color"
-
+# curl -LO https://invisible-island.net/datafiles/current/terminfo.src.gz && gunzip terminfo.src.gz
+# /usr/bin/tic -xe tmux-256color terminfo.src
+# infocmp -x tmux-256color
+# see https://gist.github.com/bbqtd/a4ac060d6f6b9ea6fe3aabe735aa9d95
+set -g default-terminal "tmux-256color"
 
 set -g status-left-length 20
 set -g status-left "[#S] "
@@ -22,7 +25,7 @@ bind m set -g mouse on
 
 
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/tmux.conf"
-bind e new-window -n config "vim ~/.tmux.conf"
+bind e new-window -n config "$EDITOR ~/.tmux.conf"
 
 bind y copy-mode
 bind Y capture-pane
