--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,7 @@ setw -g pane-base-index 1
 # infocmp -x tmux-256color
 # see https://gist.github.com/bbqtd/a4ac060d6f6b9ea6fe3aabe735aa9d95
 set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 set -g status-left-length 20
 set -g status-left "[#S] "
