[tmux] Set up Tmux Plugin Manager

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -47,8 +47,6 @@ bind v split-window -h -c "#{pane_current_path}"
 unbind c
 bind c new-window -c "#{pane_current_path}"
 bind N previous-window
-bind ö previous-window
-bind ä next-window
 
 bind h select-pane -L
 bind j select-pane -D
@@ -66,7 +64,14 @@ bind > swap-pane -D
 bind w command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind W command-prompt -p "send pane to:"    "join-pane -t '%%'"
 
-set-option -ga update-environment ' ITERM_PROFILE'
+set-option -ga update-environment 'ITERM_PROFILE TMUX_PLUGIN_MANAGER_PATH'
 
 # clear screen
 bind C-k send-keys -R \; send-keys C-l \; clear-history
+
+# Tmux Plugin Manager ---------------------------------------------------------
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+run "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
