[kitty] Configure tab bar

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -531,6 +531,7 @@ font_size 16.0
 #: Tab bar {{{
 
 # tab_bar_edge bottom
+tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -539,6 +540,7 @@ font_size 16.0
 #: The margin to the left and right of the tab bar (in pts)
 
 # tab_bar_style fade
+tab_bar_style separator
 
 #: The tab bar style, can be one of: fade, separator, powerline, or
 #: hidden. In the fade style, each tab's edges fade into the
@@ -568,6 +570,7 @@ font_size 16.0
 #: this list.
 
 # tab_separator " ┇"
+tab_separator ""
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
@@ -578,6 +581,7 @@ font_size 16.0
 #: tab that does not have focus has some activity.
 
 # tab_title_template "{title}"
+tab_title_template " ○ {title} "
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -589,6 +593,7 @@ font_size 16.0
 #: to show only the first two letters of the layout name, upper-cased.
 
 # active_tab_title_template none
+active_tab_title_template " ◉ {title} "
 
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
@@ -600,9 +605,17 @@ font_size 16.0
 # inactive_tab_background #999
 # inactive_tab_font_style normal
 
+active_tab_foreground   #eee
+active_tab_background   #35363a
+active_tab_font_style   normal
+inactive_tab_foreground #86888a
+inactive_tab_background #202124
+inactive_tab_font_style italic
+
 #: Tab bar colors and styles
 
 # tab_bar_background none
+tab_bar_background #202124
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -868,6 +881,7 @@ font_size 16.0
 #: OS specific tweaks {{{
 
 # macos_titlebar_color system
+macos_titlebar_color dark
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
@@ -1164,6 +1178,10 @@ font_size 16.0
 # map kitty_mod+,     move_tab_backward
 # map kitty_mod+alt+t set_tab_title
 # map shift+cmd+i     set_tab_title
+
+
+map kitty_mod+t     new_tab_with_cwd
+map cmd+t           new_tab_with_cwd
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
