--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -54,6 +54,8 @@ font_size 16.0
 # adjust_line_height  0
 # adjust_column_width 0
 
+adjust_column_width 99%
+
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
 #: (number followed by %), which are interpreted as percentages of the
