--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -14,6 +14,8 @@ setw -g pane-base-index 1
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+set -g set-titles on
+
 set -g status-left-length 20
 set -g status-left "[#S] "
 set -g status-right "#(zsh -c 'source ~/.oh-my-zsh-custom/battery.zsh; battery_status') %H:%M #H"
