[mux] Update config path

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -27,8 +27,8 @@ bind M set -g mouse off
 bind m set -g mouse on
 
 
-bind r source-file ~/.tmux.conf \; display "Reloaded ~/tmux.conf"
-bind e new-window -n config "$EDITOR ~/.tmux.conf"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded tmux.conf"
+  bind e new-window -n config "$EDITOR ~/.config/tmux/tmux.conf"
 
 bind y copy-mode
 bind Y capture-pane
