[kitty] Enable remote control

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -792,6 +792,7 @@ tab_bar_background #202124
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
 # allow_remote_control no
+allow_remote_control socket-only
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
@@ -805,6 +806,7 @@ tab_bar_background #202124
 #: from controlling kitty.
 
 # listen_on none
+listen_on unix:/tmp/kitty
 
 #: Tell kitty to listen to the specified unix/tcp socket for remote
 #: control connections. Note that this will apply to all kitty
