--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -11,7 +11,7 @@
 # italic_font      auto
 # bold_italic_font auto
 
-font_family MonoLisa
+font_family MonoLisa Medium
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
