[kitty] Update font settings

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -11,7 +11,10 @@
 # italic_font      auto
 # bold_italic_font auto
 
-font_family MonoLisa Medium
+font_family      MonoLisa
+bold_font        MonoLisa Medium
+italic_font      MonoLisa Italic
+bold_italic_font MonoLisa Medium Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
