--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -68,6 +68,8 @@ adjust_column_width 99%
 
 # symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
+symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 MonoLisa
+
 symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E62F,U+E700-U+E7C5,U+F000-U+F2E0,U+F300-U+F31C,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font
 
 #: Map the specified unicode codepoints to a particular font. Useful
@@ -99,6 +101,11 @@ symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0
 #: ligatures, use the font_features setting.
 
 # font_features none
+#
+font_features MonoLisa-Regular       +zero
+font_features MonoLisa-RegularItalic +zero
+font_features MonoLisa-Medium        +zero
+font_features MonoLisa-MediumItalic  +zero
 
 #: Choose exactly which OpenType features to enable or disable. This
 #: is useful as some fonts might have features worthwhile in a
