--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -11,10 +11,10 @@
 # italic_font      auto
 # bold_italic_font auto
 
-font_family      MonoLisa Regular
-bold_font        MonoLisa Medium
-italic_font      MonoLisa Regular Italic
-bold_italic_font MonoLisa Medium Italic
+font_family      MonoLisa Variable Regular
+bold_font        MonoLisa Variable SemiBold
+italic_font      MonoLisa Variable Italic
+bold_italic_font MonoLisa Variable SemiBold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -68,7 +68,7 @@ adjust_column_width 99%
 
 # symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
-symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 MonoLisa
+symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 MonoLisa Variable
 
 symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E62F,U+E700-U+E7C5,U+F000-U+F2E0,U+F300-U+F31C,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font
 
