[kitty] Nolden italic font

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -13,7 +13,7 @@
 
 font_family      MonoLisa Variable Regular
 bold_font        MonoLisa Variable SemiBold
-italic_font      MonoLisa Variable Italic
+italic_font      MonoLisa Variable MediumItalic
 bold_italic_font MonoLisa Variable SemiBold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
