[kitty] Update font features

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -101,11 +101,25 @@ symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0
 #: ligatures, use the font_features setting.
 
 # font_features none
-#
-font_features MonoLisa-Regular       +zero
-font_features MonoLisa-RegularItalic +zero
-font_features MonoLisa-Medium        +zero
-font_features MonoLisa-MediumItalic  +zero
+
+font_features MonoLisaVariableRegular-Black      +zero +ss11
+font_features MonoLisaVariableItalic-Black       +zero +ss11
+font_features MonoLisaVariableRegular-Bold       +zero +ss11
+font_features MonoLisaVariableItalic-Bold        +zero +ss11
+font_features MonoLisaVariableRegular-ExtraBold  +zero +ss11
+font_features MonoLisaVariableItalic-ExtraBold   +zero +ss11
+font_features MonoLisaVariableRegular-ExtraLight +zero +ss11
+font_features MonoLisaVariableItalic-ExtraLight  +zero +ss11
+font_features MonoLisaVariable-Italic            +zero +ss11
+font_features MonoLisaVariableRegular-Light      +zero +ss11
+font_features MonoLisaVariableItalic-Light       +zero +ss11
+font_features MonoLisaVariableRegular-Medium     +zero +ss11
+font_features MonoLisaVariableItalic-Medium      +zero +ss11
+font_features MonoLisaVariable-Regular           +zero +ss11
+font_features MonoLisaVariableRegular-SemiBold   +zero +ss11
+font_features MonoLisaVariableItalic-SemiBold    +zero +ss11
+font_features MonoLisaVariableRegular-Thin       +zero +ss11
+font_features MonoLisaVariableItalic-Thin        +zero +ss11
 
 #: Choose exactly which OpenType features to enable or disable. This
 #: is useful as some fonts might have features worthwhile in a
