--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1209,9 +1209,7 @@ macos_titlebar_color dark
 # map kitty_mod+alt+t set_tab_title
 # map shift+cmd+i     set_tab_title
 
-
-map kitty_mod+t     new_tab_with_cwd
-map cmd+t           new_tab_with_cwd
+map cmd+t  launch --cwd=oldest --type=tab --location=neighbor
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
