--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -57,8 +57,6 @@ font_size 16.0
 # adjust_line_height  0
 # adjust_column_width 0
 
-adjust_column_width 99%
-
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
 #: (number followed by %), which are interpreted as percentages of the
@@ -482,6 +480,8 @@ font_features MonoLisaVariableItalic-Thin        +zero +ss11
 #: bottom and left.
 
 # window_padding_width 0
+
+window_padding_width 2
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
