[nvim] Make matchparen hilighting more apparent

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -12,9 +12,9 @@
 # bold_italic_font auto
 
 font_family      MonoLisa Variable Regular
-bold_font        MonoLisa Variable SemiBold
-italic_font      MonoLisa Variable MediumItalic
-bold_italic_font MonoLisa Variable SemiBold Italic
+bold_font        MonoLisa Variable Bold
+italic_font      MonoLisa Variable Regular Italic
+bold_italic_font MonoLisa Variable Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
