[kitty] Adjust font weights

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -11,10 +11,10 @@
 # italic_font      auto
 # bold_italic_font auto
 
-font_family      MonoLisa Variable Regular
-bold_font        MonoLisa Variable Bold
-italic_font      MonoLisa Variable Regular Italic
-bold_italic_font MonoLisa Variable Bold Italic
+font_family      family='MonoLisa Variable' variable_name=MonoLisaVariableRegular wght=320
+bold_font        family='MonoLisa Variable' variable_name=MonoLisaVariableRegular wght=450
+italic_font      family='MonoLisa Variable' variable_name=MonoLisaVariableItalic  wght=320
+bold_italic_font family='MonoLisa Variable' variable_name=MonoLisaVariableItalic  wght=450
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
